# zzpolycalc

./: .depend  AUTHORS  CMakeLists.txt  Makefile  README.md
cmake/script/: runtest.cmake
dockerfile/: Dockerfile  build.sh
src/: CMakeLists.txt  crc.f90  daughters.f90  decompose.f90  findZZ.f90  functions.f90  getopt.f90  hash_modules.F90  hexagon.f90  input.f90  kekule.f90  md5.c  md5.h  operators.f90  options.f90  polynomial.f90  print.f90  schlegel.f90  sort.f90  types_module.F90  types_module.f90  xxhashwrapper.c  zhang.F90  zhang.f90
test/: C140I.con  C140I.out  C60Ih.con  C60Ih.out  CMakeLists.txt  benzene.out  benzene.xyz  circumcircumcoronene.out  circumcircumcoronene.xml  circumcircumcoronene.xyz  nt-6-6-6.out  nt-6-6-6.xyz
